[package]
name = "micro_sp_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
rfd = "0.15"
log = "0.4.22"
eframe = "0.32.0"
env_logger = "0.11.5"
poll-promise = "0.3.0"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.29.1", features = ["tokio-comp"] }
ordered-float = {version = "3.4.0", features = ["serde"] }
micro_sp = { git = "https://github.com/endre90/micro_sp", branch = "master" }
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.140"